Update .env file to mask API keys
Removed sensitive API keys and replaced with placeholders.

--- a/notion/.env
+++ b/notion/.env
@@ -1,6 +1,1 @@
-COMPOSIO_API_KEY ="ak_x2NoAohKvZ5T1u0C9fCH"
-NOTION_API_KEY="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"
-USER_ID = "26f2ee6f-9b7d-4e41-b35d-cd0ad7536b58"
-AUTH_CONFIG_ID="ac_rSKlBM-rPu7a"
-
-ac_JDSRZrVnsv-8
+NOTION_API_KEY="XXXXXXXXXXXXXXXXXXXXXX"
